[gd_scene load_steps=3 format=3 uid="uid://dyadulnnnejok"]

[ext_resource type="Script" path="res://Inventory/inventory.gd" id="1_blwee"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2w2tr"]
size = Vector2(128, 130)

[node name="Inventory" type="Node2D"]
position = Vector2(-1, -2)
script = ExtResource("1_blwee")

[node name="bg" type="ColorRect" parent="."]
offset_right = 667.0
offset_bottom = 329.0
mouse_filter = 1
color = Color(0.427605, 0.33103, 0.233801, 1)

[node name="Label" type="Label" parent="."]
offset_left = 498.0
offset_top = 22.0
offset_right = 652.0
offset_bottom = 298.0
text = "..."

[node name="slot1" type="Area2D" parent="."]
position = Vector2(88, 83)

[node name="ColorRect" type="ColorRect" parent="slot1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -66.0
offset_right = 66.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.670702, 0.5675, 0.42362, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="slot1"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_2w2tr")

[node name="slot2" type="Area2D" parent="."]
position = Vector2(247, 83)

[node name="ColorRect" type="ColorRect" parent="slot2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -66.0
offset_right = 66.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.670702, 0.5675, 0.42362, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="slot2"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_2w2tr")

[node name="slot3" type="Area2D" parent="."]
position = Vector2(406, 84)

[node name="ColorRect" type="ColorRect" parent="slot3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -66.0
offset_right = 66.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.670702, 0.5675, 0.42362, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="slot3"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_2w2tr")

[node name="slot4" type="Area2D" parent="."]
position = Vector2(89, 235)

[node name="ColorRect" type="ColorRect" parent="slot4"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -66.0
offset_right = 66.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.670702, 0.5675, 0.42362, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="slot4"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_2w2tr")

[node name="slot5" type="Area2D" parent="."]
position = Vector2(248, 235)

[node name="ColorRect" type="ColorRect" parent="slot5"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -66.0
offset_right = 66.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.670702, 0.5675, 0.42362, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="slot5"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_2w2tr")

[node name="slot6" type="Area2D" parent="."]
position = Vector2(407, 236)

[node name="ColorRect" type="ColorRect" parent="slot6"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -66.0
offset_right = 66.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.670702, 0.5675, 0.42362, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="slot6"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_2w2tr")

[node name="Label2" type="Label" parent="."]
offset_left = 495.0
offset_top = 280.0
offset_right = 593.0
offset_bottom = 303.0
text = "Click to drop"

[connection signal="mouse_entered" from="slot1" to="." method="_on_slot_1_mouse_entered"]
[connection signal="mouse_exited" from="slot1" to="." method="_on_slot_1_mouse_exited"]
[connection signal="mouse_entered" from="slot2" to="." method="_on_slot_2_mouse_entered"]
[connection signal="mouse_exited" from="slot2" to="." method="_on_slot_2_mouse_exited"]
[connection signal="mouse_entered" from="slot3" to="." method="_on_slot_3_mouse_entered"]
[connection signal="mouse_exited" from="slot3" to="." method="_on_slot_3_mouse_exited"]
[connection signal="mouse_entered" from="slot4" to="." method="_on_slot_4_mouse_entered"]
[connection signal="mouse_exited" from="slot4" to="." method="_on_slot_4_mouse_exited"]
[connection signal="mouse_entered" from="slot4/ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="slot4/ColorRect" to="." method="_on_color_rect_mouse_exited"]
[connection signal="mouse_entered" from="slot5" to="." method="_on_slot_5_mouse_entered"]
[connection signal="mouse_exited" from="slot5" to="." method="_on_slot_5_mouse_exited"]
[connection signal="mouse_entered" from="slot5/ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="slot5/ColorRect" to="." method="_on_color_rect_mouse_exited"]
[connection signal="mouse_entered" from="slot6" to="." method="_on_slot_6_mouse_entered"]
[connection signal="mouse_exited" from="slot6" to="." method="_on_slot_6_mouse_exited"]
[connection signal="mouse_entered" from="slot6/ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="slot6/ColorRect" to="." method="_on_color_rect_mouse_exited"]
